# LCCA

./: .gitignore
code/claude/backend/: Dockerfile  add_practice_mode.py  pyproject.toml  requirements.txt  seed_prompt_templates.py  seed_scenario4.py  update_task4_questions.py  update_templates_strict.py
code/claude/backend/alembic/: env.py
code/claude/backend/alembic/versions/: 001_initial_schema.py  002_add_task_weight.py  003_scenario_owned_by_user.py  004_add_admins_table.py  005_prompt_template_llm_config.py  006_prompt_template_task_ids.py  007_score_run_prompt_template_name.py  008_score_run_rendered_prompts.py  009_score_run_llm_metadata.py
code/claude/backend/app/: main.py
code/claude/backend/app/api/schemas/: __init__.py  (+7 more)
code/claude/backend/app/core/: __init__.py  auth_helpers.py  config.py  exceptions.py  security.py  status.py  timeout.py
code/claude/backend/app/db/: __init__.py  session.py
code/claude/backend/app/middleware/: __init__.py  audit.py
code/claude/backend/app/models/: __init__.py  artifact.py  attempt.py  audit.py  base.py  rubric.py  scenario.py  scoring.py  user.py
code/claude/backend/app/services/: __init__.py
code/claude/backend/app/state_machines/: attempt.py
code/claude/backend/app/workers/: tasks.py
code/claude/backend/docs/: __init__.py  openapi_contract.py
code/claude/backend/docs/template/: S4_T1_READING_NOTES_SCORING_v1.md  S4_T2_WRITING_EMAIL_SCORING_v1.md  S4_T3_LISTENING_NOTES_SCORING_v1.md  S4_T4_SPEAKING_INTERVIEW_SCORING_v1.md
code/claude/backend/docs/user_prompt/: task1.md  task2.md  task3.md  task4.md
(+202 files in other folders)
