[tool.poetry]
name = "lcca-backend"
version = "0.1.0"
description = "LCCA Online English Assessment System - Backend"
authors = ["LCCA Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.25"}
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
arq = ">=0.25.0"
redis = ">=5.0.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
boto3 = ">=1.34.0"
httpx = ">=0.26.0"
tenacity = ">=8.2.0"
email-validator = ">=2.1.0"
python-dateutil = ">=2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = ">=0.26.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true